# garagem_back

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_veiculo_capa.py  0003_remove_veiculo_categoria_remove_veiculo_marca_and_more.py  0004_veiculo_descricao.py  0006_acessorio_veiculo_delete_acessorios.py  0007_alter_veiculo_categoria_alter_veiculo_cor_and_more.py  0008_alter_cor_options_alter_veiculo_options_and_more.py  0009_veiculo_acessorios.py
garagem/models/: __init__.py  veiculo.py
garagem/serializers/: veiculo.py
garagem/views/: acessorio.py  veiculo.py
uploader/migrations/: 0001_initial.py
